# vec-array

./: .gitignore  Cargo.toml  Justfile
src/: error.rs  lib.rs  main.rs  vec.rs
src/vec/: test.rs
